[cmake] fix setup script path order

--- a/cmake/setup.sh.in
+++ b/cmake/setup.sh.in
@@ -6,10 +6,10 @@ export FCCSWSHAREDIR=$FCCSWBASEDIR/share/FCCSW
 export FCC_DETECTORS=$FCCSWSHAREDIR
 export FCC_PYTHIACARDS=$FCCSWSHAREDIR
 
-export PATH=$PATH:$FCCSWBASEDIR/scripts:$FCCSWBASEDIR/bin
-export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$FCCSWBASEDIR/lib:$FCCSWBASEDIR/lib64
-export PYTHONPATH=$PYTHONPATH:$FCCSWBASEDIR/lib:$FCCSWBASEDIR/python
-export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$FCCSWBASEDIR
+export PATH=$FCCSWBASEDIR/scripts:$FCCSWBASEDIR/bin:$PATH
+export LD_LIBRARY_PATH=$FCCSWBASEDIR/lib:$FCCSWBASEDIR/lib64:$LD_LIBRARY_PATH
+export PYTHONPATH=$FCCSWBASEDIR/lib:$FCCSWBASEDIR/python:$PYTHONPATH
+export CMAKE_PREFIX_PATH=$FCCSWBASEDIR:$CMAKE_PREFIX_PATH
 
 
 
