--- a/_data/permalinks.yml
+++ b/_data/permalinks.yml
@@ -1,14 +1,14 @@
 ---
-- url: https://cern.ch/fccsw-forum
-  name: FCCSW Forum 
+- url: https://hep-fcc.github.io/fcc-tutorials/
+  name: FCC Documentation 
+- url: https://cern.ch/key4hep
+  name: Key4HEP Documentation 
+- url: https://mattermost.web.cern.ch/fccsw/
+  name: FCC Mattermost Chat
 - url: http://cern.ch/simba3/SelfSubscription.aspx?groupName=fcc-experiments-sw-dev
   name: FCCSW Mailing list
 - url: https://github.com/HEP-FCC/
   name: FCCSW on GitHub
-- url: https://epsft-jenkins.cern.ch/view/FCC/
-  name: FCCSW Jenkins
-- url: http://cdash.cern.ch/index.php?project=FCC
-  name: FCCSW CDash
 - url: https://github.com/HEP-FCC/FCCSW/blob/master/doc/CppCodingStyleGuidelines.md
   name: FCCSW C++ Style Guide
 - url: https://github.com/HEP-FCC/FCCSW/blob/master/doc/GeneralCppGuidelines.md
