--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,10 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        SETUP: ["init.sh", 'init_lcg.sh']
     steps:
     - uses: actions/checkout@v2
     - name: Install CVMFS
@@ -31,7 +34,28 @@ jobs:
     - name: Start container
       run: |
         docker run -it --name CI_container -v ${GITHUB_WORKSPACE}:/Package -v /cvmfs:/cvmfs:shared -d clicdp/cc7-lcg /bin/bash
-    - name: Compile and test
+    - name: Setup container
       run: |
-        docker exec CI_container /bin/bash -c "yum -y install environment-modules; source /etc/profile.d/modules.sh; ln -s /usr/lib64/liblzma.so.5.2.2 /usr/lib64/liblzma.so; cd ./Package; ./.github/scripts/compile_and_test.sh;"
+        docker exec CI_container /bin/bash -c "yum -y install environment-modules; source /etc/profile.d/modules.sh; ln -s /usr/lib64/liblzma.so.5.2.2 /usr/lib64/liblzma.so;"
+
+    - name: CMake Configure
+      run: |
+        docker exec CI_container /bin/bash -c 'cd .Package; mkdir -p build install; source ${{ matrix.SETUP }}; cd build; cmake -DCMAKE_INSTALL_PREFIX=../install -DCMAKE_CXX_STANDARD=17  -DCMAKE_CXX_FLAGS=" -fdiagnostics-color=always " -G Ninja ..; '
+
+    - name: Compile FCCSW
+      run: |
+        docker exec CI_container /bin/bash -c 'cd ./Package/build; ninja -k0;'
+
+    - name: Install FCCSW
+      run: |
+        docker exec CI_container /bin/bash -c 'cd ./Package/build; ninja install;'
+
+    - name: Test FCCSW
+      run: |
+        docker exec CI_container /bin/bash -c 'cd ./Package/build; ctest;'
+
+
+
+
+        cd ./Package; ./.github/scripts/compile_and_test.sh;"
 
