--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,15 +44,15 @@ jobs:
 
     - name: Compile FCCSW
       run: |
-        docker exec CI_container /bin/bash -c 'cd ./Package/build; ninja -k0;'
+        docker exec CI_container /bin/bash -c 'cd ./Package; source ${{ matrix.SETUP }}; cd build; ninja -k0;'
 
     - name: Install FCCSW
       run: |
-        docker exec CI_container /bin/bash -c 'cd ./Package/build; ninja install;'
+        docker exec CI_container /bin/bash -c 'cd ./Package; source ${{ matrix.SETUP }}; cd build;  ninja -k0 install;'
 
     - name: Test FCCSW
       run: |
-        docker exec CI_container /bin/bash -c 'cd ./Package/build; ctest;'
+        docker exec CI_container /bin/bash -c 'cd ./Package; source source ${{ matrix.SETUP }}; cd build; ctest;'
 
 
 
