--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         SETUP: ["init.sh", 'init_lcg.sh']
