--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,6 +53,12 @@ jobs:
     - name: Test FCCSW
       run: |
         docker exec CI_container /bin/bash -c 'cd ./Package; source ${{ matrix.SETUP }}; cd build; ctest -j `getconf _NPROCESSORS_ONLN`;'
+    - name: Upload Test Results for FCCSW
+      uses: actions/upload-artifact@v2
+      with:
+        name: FCCSWCTestLog
+        path: ./Package/build/Testing/Temporary/LastTest.log
+
 
 
 
