--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        SETUP: ["init.sh", 'init_lcg.sh']
+        SETUP: ["init_key4hep.sh", 'init_lcg.sh']
     steps:
     - uses: actions/checkout@v2
     - name: Install CVMFS
@@ -52,6 +52,7 @@ jobs:
         docker exec CI_container /bin/bash -c 'cd ./Package; source ${{ matrix.SETUP }}; cd build;  ninja -k0 install;'
 
     - name: Test FCCSW
+      continue-on-error: ${{matrix.SETUP == 'init_key4hep.sh' }}
       run: |
         docker exec CI_container /bin/bash -c 'cd ./Package; source ${{ matrix.SETUP }}; cd build; ctest -j `getconf _NPROCESSORS_ONLN`;'
     - name: Upload Test Results for FCCSW
