--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,11 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        SETUP: ["init.sh", 'init_lcg.sh']
+        SETUP: ["init_key4hep.sh", 'init_lcg.sh']
     steps:
     - uses: actions/checkout@v2
     - name: Install CVMFS
@@ -36,26 +37,31 @@ jobs:
         docker run -it --name CI_container -v ${GITHUB_WORKSPACE}:/Package -v /cvmfs:/cvmfs:shared -d clicdp/cc7-lcg /bin/bash
     - name: Setup container
       run: |
-        docker exec CI_container /bin/bash -c "yum -y install environment-modules; source /etc/profile.d/modules.sh; ln -s /usr/lib64/liblzma.so.5.2.2 /usr/lib64/liblzma.so;"
+        docker exec CI_container /bin/bash -c " ln -s /usr/lib64/liblzma.so.5.2.2 /usr/lib64/liblzma.so;"
 
     - name: CMake Configure
       run: |
-        docker exec CI_container /bin/bash -c 'cd .Package; mkdir -p build install; source ${{ matrix.SETUP }}; cd build; cmake -DCMAKE_INSTALL_PREFIX=../install -DCMAKE_CXX_STANDARD=17  -DCMAKE_CXX_FLAGS=" -fdiagnostics-color=always " -G Ninja ..; '
+        docker exec CI_container /bin/bash -c 'cd ./Package; mkdir -p build install; source ${{ matrix.SETUP }}; cd build; cmake -DCMAKE_INSTALL_PREFIX=../install -DCMAKE_CXX_STANDARD=17  -DCMAKE_CXX_FLAGS=" -fdiagnostics-color=always " -G Ninja ..; '
 
     - name: Compile FCCSW
       run: |
-        docker exec CI_container /bin/bash -c 'cd ./Package/build; ninja -k0;'
+        docker exec CI_container /bin/bash -c 'cd ./Package; source ${{ matrix.SETUP }}; cd build; ninja -k0;'
 
     - name: Install FCCSW
       run: |
-        docker exec CI_container /bin/bash -c 'cd ./Package/build; ninja install;'
+        docker exec CI_container /bin/bash -c 'cd ./Package; source ${{ matrix.SETUP }}; cd build;  ninja -k0 install;'
 
     - name: Test FCCSW
+      continue-on-error: ${{matrix.SETUP == 'init_key4hep.sh' }}
       run: |
-        docker exec CI_container /bin/bash -c 'cd ./Package/build; ctest;'
+        docker exec CI_container /bin/bash -c 'cd ./Package; source ${{ matrix.SETUP }}; cd build; ctest -j `getconf _NPROCESSORS_ONLN`;'
+    - name: Upload Test Results for FCCSW
+      uses: actions/upload-artifact@v2
+      if:  success()  || failure()
+      with:
+        name: FCCSWCTestLog
+        path: build/Testing/Temporary/LastTest.log
 
 
 
-
-        cd ./Package; ./.github/scripts/compile_and_test.sh;"
 
