--- a/Reconstruction/RecTracker/CMakeLists.txt
+++ b/Reconstruction/RecTracker/CMakeLists.txt
@@ -9,19 +9,20 @@ gaudi_depends_on_subdirs(GaudiAlg FWCore Detector/DetInterface Sim/SimG4Interfac
 find_package(CLHEP)
 find_package(FCCEDM)
 find_package(PODIO)
+find_package(Eigen)
 
 find_package(ROOT REQUIRED COMPONENTS Geom)
 
 gaudi_install_python_modules()
 gaudi_add_library(TrackingUtils
                  src/lib/*.cpp
-                 INCLUDE_DIRS DD4hep HepMC  FWCore  FCCEDM PODIO  DetInterface RecInterface SimG4Interface ROOT
+                 INCLUDE_DIRS DD4hep HepMC  FWCore  FCCEDM PODIO  DetInterface RecInterface SimG4Interface ROOT Eigen
                  LINK_LIBRARIES GaudiAlgLib FCCEDM PODIO DD4hep ROOT 
                  PUBLIC_HEADERS RecTracker tricktrack) 
 
 gaudi_add_module(RecTracker
                  src/components/*.cpp
-                 INCLUDE_DIRS DD4hep Geant4 FWCore SimG4Common SimG4Interface  ROOT RecInterface TrackingUtils CLHEP
+                 INCLUDE_DIRS DD4hep Geant4 FWCore SimG4Common SimG4Interface  ROOT RecInterface TrackingUtils CLHEP Eigen
                  LINK_LIBRARIES ROOT GaudiAlgLib FCCEDM PODIO DD4hep TrackingUtils CLHEP)
 
 
