--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -14,8 +14,8 @@ install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/options DESTINATION ${CMAKE_INSTALL_
 
 gaudi_add_module(Examples
                  src/*.cpp
-		             INCLUDE_DIRS ROOT GaudiKernel Geant4 DD4hep SimG4Interface DetInterface DetCommon
-                 LINK_LIBRARIES GaudiAlgLib FWCore DetCommon ROOT GaudiKernel DD4hep
+		             INCLUDE_DIRS ROOT GaudiKernel Geant4 DD4hep SimG4Interface DetInterface DetCommon FCCEDM
+                 LINK_LIBRARIES GaudiAlgLib FWCore DetCommon ROOT GaudiKernel DD4hep FCCEDM
                  )
 target_link_libraries(Examples ${Geant4_LIBRARIES})
 
