--- a/_data/permalinks.yml
+++ b/_data/permalinks.yml
@@ -2,7 +2,9 @@
 - url: https://hep-fcc.github.io/fcc-tutorials/
   name: FCC Documentation 
 - url: https://cern.ch/key4hep
-  name: Key4HEP Documentation 
+  name: Key4HEP Documentation
+- url: https://fccsw-forum.web.cern.ch/
+  name: FCC Forum
 - url: https://mattermost.web.cern.ch/fccsw/
   name: FCC Mattermost Chat
 - url: http://cern.ch/simba3/SelfSubscription.aspx?groupName=fcc-experiments-sw-dev
