rename to k4_workflow_blocks and install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,7 @@ include(GNUInstallDirs)
 add_subdirectory(FWCore)
 add_subdirectory(Examples)
 
+install(DIRECTORY k4_workflow_blocks DESTINATION python/)
+
 
 
