--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,3 +1,15 @@
 
 
 install(DIRECTORY options DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME}/Examples)
+
+
+file(GLOB fccsw_examples options/*.py)
+list(FILTER fccsw_examples EXCLUDE REGEX "__init__.py")
+foreach(opt ${fccsw_examples})
+  get_filename_component(e ${opt} NAME)
+  add_test(NAME ${e}
+           WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/options
+           COMMAND k4run ${e}
+           )
+endforeach()
+
