--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,6 +1,9 @@
 
 
-install(DIRECTORY options DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME}/Examples)
+install(DIRECTORY options 
+        DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME}/Examples
+        PATTERN k4_workflow_blocks EXCLUDE
+        )
 
 
 file(GLOB fccsw_examples options/*.py)
