Replacing whole Detector Display section with link to Phoenix

--- a/_data/permalinks.yml
+++ b/_data/permalinks.yml
@@ -17,3 +17,5 @@
   name: General C++ Guidelines
 - url: http://fcc-physics-events.web.cern.ch/fcc-physics-events/
   name: FCC Physics Event Database
+- url: https://fccsw.web.cern.ch/fccsw/phoenix/
+  name: Phoenix@FCC
