--- a/_data/permalinks.yml
+++ b/_data/permalinks.yml
@@ -15,9 +15,11 @@
   name: FCCSW C++ Style Guide
 - url: https://github.com/HEP-FCC/FCCSW/blob/master/doc/GeneralCppGuidelines.md
   name: General C++ Guidelines
+- url: https://hep-fcc.github.io/FCCAnalyses/
+  name: FCCAnalyses Framework
 - url: http://fcc-physics-events.web.cern.ch/fcc-physics-events/
   name: FCC Physics Event Database
-- url: https://fccsw.web.cern.ch/fccsw/phoenix/
-  name: Phoenix@FCC
 - url: https://hep-fcc.github.io/FCCeePhysicsPerformance/
   name: FCCee Physics Performance
+- url: https://fccsw.web.cern.ch/fccsw/phoenix/
+  name: Phoenix@FCC
