--- a/_data/permalinks.yml
+++ b/_data/permalinks.yml
@@ -1,14 +1,14 @@
 ---
 - url: https://hep-fcc.github.io/fcc-tutorials/
-  name: FCC Documentation 
+  name: FCC Documentation
 - url: https://cern.ch/key4hep
   name: Key4HEP Documentation
 - url: https://fccsw-forum.web.cern.ch/
   name: FCC Software Forum
 - url: https://mattermost.web.cern.ch/fccsw/
   name: FCC Mattermost Chat
-- url: http://cern.ch/simba3/SelfSubscription.aspx?groupName=fcc-experiments-sw-dev
-  name: FCCSW Mailing list
+- url: https://groups.cern.ch/Pages/GroupSearch.aspx?k=FCC-PED-SoftwareAndComputing*
+  name: FCC PED Software Mailing Lists
 - url: https://github.com/HEP-FCC/
   name: FCCSW on GitHub
 - url: https://github.com/HEP-FCC/FCCSW/blob/master/doc/CppCodingStyleGuidelines.md
@@ -23,3 +23,5 @@
   name: FCCee Physics Performance
 - url: https://fccsw.web.cern.ch/fccsw/phoenix/
   name: Phoenix@FCC
+- url: https://fcc-ee-detector-full-sim.docs.cern.ch/
+  name: FCC-ee Detector Full Sim
