Adding FCC SW meetings iframe

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: FCC Software
+# title: FCC Software
+title: FCC&nbsp;Software
 description: >
   Physics software for the Future Circular Collider.
 url: "" # the subpath of your site, e.g. /blog
