--- a/_data/permalinks.yml
+++ b/_data/permalinks.yml
@@ -12,9 +12,9 @@
 - url: https://groups.cern.ch/Pages/GroupSearch.aspx?k=FCC-PED-SoftwareAndComputing*
   name: FCC PED Software Mailing Lists
 - url: https://github.com/HEP-FCC/
-  name: FCCSW on GitHub
+  name: FCC Software on GitHub
 - url: https://github.com/HEP-FCC/FCCSW/blob/master/doc/CppCodingStyleGuidelines.md
-  name: FCCSW C++ Style Guide
+  name: FCC Software C++ Style Guide
 - url: https://github.com/HEP-FCC/FCCSW/blob/master/doc/GeneralCppGuidelines.md
   name: General C++ Guidelines
 - url: https://hep-fcc.github.io/FCCAnalyses/
